# nushell-evo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: nightly-build.yml  release-msi.yml  release.yml
crates/nu-mcp/src/: evaluation.rs
crates/nu_plugin_browse/: Cargo.toml  README.md  test_browse.nu
crates/nu_plugin_browse/src/: launch.rs  lib.rs  main.rs  page.rs  session.rs  utils.rs
crates/nu_plugin_browse/src/commands/: browse.rs  browse_close.rs  browse_open.rs  browse_status.rs  mod.rs
crates/nu_plugin_polars/: Cargo.toml
